--- a/css-page.html
+++ b/css-page.html
@@ -220,6 +220,33 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Disabled State</b></h3>
+          <input class="form-control" type="text" value="input disabled" disabled>
+        </div>
+        <div class="col-lg-6">
+          <h3><b>Readonly State</b></h3>
+          <input class="form-control" type="text" value="readonly input value" readonly>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-5">
+          <h3><b>Validation States</b></h3>
+          <div class="form-group has-success">
+            <label class="control-label" for="inputSuccess1">Input with success</label>
+            <input type="text" class="form-control" id="inputSuccess1">
+          </div>
+          <div class="form-group has-warning">
+            <label class="control-label" for="inputWarning1">Input with warning</label>
+            <input type="text" class="form-control" id="inputWarning1">
+          </div>
+          <div class="form-group has-error">
+            <label class="control-label" for="inputError1">Input with error</label>
+            <input type="text" class="form-control" id="inputError1">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
