--- a/components.html
+++ b/components.html
@@ -204,11 +204,50 @@
       </div>
       <hr>
       <h2><b>Breadcrumb</b></h2>
-      <ol class="breadcrumb">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Library</a></li>
-        <li class="active">Data</li>
-      </ol>
+      <div class="row">
+        <div class="col-lg-8">
+          <ol class="breadcrumb">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Library</a></li>
+            <li class="active">Data</li>
+          </ol>
+        </div>
+      </div>
+      <hr>
+      <h2><b>Pagination</b></h2>
+      <div class="row">
+        <div class="col-lg-8">
+          <h3><b>Default Pagination</b></h3>
+          <nav>
+            <ul class="pagination">
+              <li><a href="#"><span aria-hidden="true"><i class="fa fa-angle-left"></i></span><span class="sr-only">Previous</span></a></li>
+              <li class="active"><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li><a href="#"><span aria-hidden="true"><i class="fa fa-angle-right"></i></span><span class="sr-only">Next</span></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8">
+          <h3><b>Pager</b></h3>
+          <nav>
+            <ul class="pager">
+              <li><a href="#">Previous</a></li>
+              <li><a href="#">Next</a></li>
+            </ul>
+          </nav>
+          <nav>
+            <ul class="pager">
+              <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Older</a></li>
+              <li class="next"><a href="#">Newer <span aria-hidden="true">&rarr;</span></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
