--- a/components.html
+++ b/components.html
@@ -260,6 +260,22 @@
           <span class="label label-danger">Danger</span>
         </div>
       </div>
+      <hr>
+      <h2><b>Badges</b></h2>
+      <div class="row">
+        <div class="col-lg-12">
+          <a href="#">Messages <span class="badge">12</span></a><br><br>
+          <button class="btn btn-primary" type="button">b
+            Notifications <span class="badge">5</span>
+          </button><br><br>
+          <ul class="nav nav-pills" role="tablist">
+            <li role="presentation" class="active"><a href="#">Home <span class="badge">42</span></a></li>
+            <li role="presentation"><a href="#">Profile</a></li>
+            <li role="presentation"><a href="#">Messages <span class="badge">3</span></a></li>
+          </ul>
+        </div>
+      </div>
+      <br><hr>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
